@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.79 2013/02/06 23:21:47 jperkin Exp $
+# $NetBSD: Makefile,v 1.80 2013/03/02 20:33:22 wiz Exp $
 
 DISTNAME=	jabberd-2.2.17
-PKGREVISION=	6
+PKGREVISION=	7
 CATEGORIES=	chat
 MASTER_SITES=	http://cloud.github.com/downloads/jabberd2/jabberd2/
 EXTRACT_SUFX=	.tar.xz
@@ -91,11 +91,11 @@ pre-configure:
 		-e "s|@jabberd_c2s_bin@|c2s|g"				\
 		-e "s|@jabberd_s2s_bin@|s2s|g"				\
 		-e "s|@jabberd_sm_bin@|sm|g"				\
-		-e "s|@localstatedir@/jabberd/db|${JABBERD_DBDIR}|g"	\
-		-e "s|@localstatedir@/jabberd/log|${JABBERD_LOGDIR}|g"	\
-		-e "s|@localstatedir@/jabberd/pid|${JABBERD_PIDDIR}|g"	\
-		-e "s|@localstatedir@/jabberd/run|${JABBERD_PIDDIR}|g"	\
-		-e "s|@localstatedir@/jabberd/stats|${JABBERD_LOGDIR}|g"\
+		-e "s|@localstatedir@/@package@/db|${JABBERD_DBDIR}|g"	\
+		-e "s|@localstatedir@/@package@/log|${JABBERD_LOGDIR}|g"	\
+		-e "s|@localstatedir@/@package@/pid|${JABBERD_PIDDIR}|g"	\
+		-e "s|@localstatedir@/@package@/run|${JABBERD_PIDDIR}|g"	\
+		-e "s|@localstatedir@/@package@/stats|${JABBERD_LOGDIR}|g"\
 		-e "s|@localstatedir@/lib/jabberd2|${JABBERD_DBDIR}|g"	\
 		-e "s|@pkglibdir@|${PREFIX}/lib/jabberd|g"		\
 		-e "s|<cachain>@sysconfdir@|<cachain>${SSLCERTS}|g"	\
