@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.865 2013/03/11 19:50:43 bsiegert Exp $
+$NetBSD: CHANGES-2013,v 1.866 2013/03/11 19:57:56 adam Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -1227,3 +1227,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated devel/gettext-tools to 0.18.2.1 [adam 2013-03-11]
 	Updated graphics/GraphicsMagick to 1.3.18 [adam 2013-03-11]
 	Updated graphics/p5-GraphicsMagick to 1.3.18 [adam 2013-03-11]
+	Updated chat/jabberd2 to 2.2.17nb7 [wiz 2013-03-11]
